# Flow

./: .env.example  .gitignore  MyFlow_完整设计文档.md  README.md  main.py  pyproject.toml  开发与测试记录.md
requirement_batch_io/: SUMMARY.md  batch_manifest.yaml  run_specs.yaml
requirement_batch_io/fixtures/: INPUT_COVERAGE.txt  r01_paper_en.txt  r02_reviews.csv  r03_meeting_transcript.txt  r04_product.txt  r05_interview.txt  r06_jd.txt  r06_resume.txt  r07_products.csv  r08_report.md  r09_competitor_notes.txt  r10_code.py  r11_tickets.json  r12_contract.txt  r13_news.txt  r13_source2.txt  r13_source3.txt  r14_survey_open.csv  r15_prd.md  r16_ebook.txt  r17_annual_notes.txt  r17_firm_delta.txt  r17_firm_echo.txt  r18_repo_layout.txt  r20_events.csv  r20_funnel_steps.txt  r20_rfm_params.txt  r20_users.csv
scripts/: batch_requirement_e2e.py  migrate_workflow_outputs_to_mapping.py  requirement_batch_report.py
src/myflow/: __init__.py  benchmarks.py  cli.py  display.py  quality_metrics.py
tests/: conftest.py
tests/e2e/: benchmark_failures.md  test_benchmark.py  test_compose_run_subworkflow.py
tests/integration/: test_cli_smoke.py  test_llm_live.py  test_requirement_batch_reader_smoke.py  test_runner.py  test_runner_nested_workflow.py
tests/unit/: test_champion_cache.py  test_composer.py  test_composer_cache_hit.py  test_composer_compose.py  test_display_extra.py  test_file_reader_skill.py  test_file_writer_skill.py  (+11 more)
workflows/: analyze_csv_trends.yaml  champion_test_2.yaml  data_analysis_to_console.yaml  pdf_translation_and_summary.yaml  read_and_write_txt.yaml
(+50 files in other folders)
